fix menu list items overlapping sometimes

--- a/resources/assets/css/components/menu.less
+++ b/resources/assets/css/components/menu.less
@@ -174,11 +174,6 @@
     .icon(fill; @black);
     color: @black;
   }
-  &.stick {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-  }
   &.external {
     .icon-arrow-right {
       transition: @run @bezier_deform;
@@ -204,6 +199,9 @@
     font-size: @font_size_small;
     margin-left: auto;
   }
+}
+.vein-bottom {
+  margin-top: auto;
 }
 .export-title {
   .flexy(center);
